<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".tambahBarang.TambahBarangActivity">

    <TextView
        android:id="@+id/testDataBarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        tools:text="@string/nama_barang" />

    <TextView
        android:id="@+id/ketGambar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/testDataBarang"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/geser_untuk_melihat_gambar_lainnya" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvGambar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/ketGambar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/card_viewPicture"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_barcode" />

        <TextView
            android:id="@+id/testBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="123456789" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_viewPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/card_viewBarcode"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:id="@+id/btnPicture"
            android:layout_width="250dp"
            android:layout_height="63dp">

            <ImageView
                android:id="@+id/logoFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:src="@drawable/photo_camera"
                android:contentDescription="@string/upload_foto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:layout_toEndOf="@id/logoFoto"
                android:layout_toRightOf="@id/logoFoto"
                android:text="@string/upload_foto" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_viewBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnSave"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:id="@+id/btnBarcode"
            android:layout_width="250dp"
            android:layout_height="63dp">

            <ImageView
                android:id="@+id/logoBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:src="@drawable/barcode"
                android:contentDescription="@string/upload_barcode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:layout_toEndOf="@id/logoBarcode"
                android:layout_toRightOf="@id/logoBarcode"
                android:text="@string/upload_barcode" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_orange"
        android:text="@string/save"
        android:textColor="@android:color/white" />
</RelativeLayout>